<resources>
    <string name="app_name">appLab4_task7</string>
    <string name="str_title">Title:</string>
    <string name="str_artist">Artist:</string>
    <string name="str_album">Album:</string>
    <string name="str_play">Play</string>
    <string name="str_pause">Pause</string>
    <string name="str_url">Enter Song URL</string>
    <string name="null_str">" "</string>
    <string name="wrong_url">Wrong URL</string>
    <string name="media_playing">Media Playing... wait for it</string>
    <string name="media_paused">Media Paused</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="metadata_error">Error fetching metadata</string>
    <string name="prepare_error">Error preparing media</string>

</resources>